--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-background">
         <nav>
             <h3 class="nav-title">Ma<span class="r">r</span>y</h3>
             <ul>
-                <li><a class="dark-2" href="">Porfolio</a></li>
+                <li><a class="dark-2" href="">Portfolio</a></li>
                 <li><a class="dark-2" href="">Blog</a></li>
                 <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
@@ -34,7 +34,66 @@
     </header>
 
     <main>
+        <section class="about secondary-background">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name: </p>
+                    <p class="item-description">Mary Hardy</p>                 
 
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:
+                    </p>
+                    <p class="item-description">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth:
+                    </p>
+                    <p class="item-description">11 November 1987</p>
+
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From:
+                    </p>
+                    <p class="item-description">Los Angeles, USA</p>
+
+                </div>
+            </div>   
+        </section>
+        <section class="skills">
+            <div class="intro">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+           <div class="box">
+            <div class="skill-container">
+                <image src="images/icons/js.png" alt="javascript"></image>
+                <h4 class="skill-title">Vanilla JavaScript</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+            </div>
+            <div class="skill-container">
+                <image src="images/icons/react.png" alt="react"></image>
+
+                <h4 class="skill-title">React</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill-container">
+                 <image src="images/icons/nodejs.png" alt="node js"></image>
+
+                <h4 class="skill-title">Node.js</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill-container">
+                 <image src="images/icons/mongo.png" alt="mongo DB"></image>
+
+                <h4 class="skill-title">MongoDB</h4>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            </div>
+        </section>
     </main>
     
     <footer>
