--- a/index.html
+++ b/index.html
@@ -95,8 +95,92 @@
             </div>
         </section>
     </main>
+    <section class="resume">
+    <h3 class="section-title">A summary of My Resume</h3>
+    <div class="resume-container">
+    <div class="resume-column">
+        <h3 class="resume-column-title"> My Education</h3>
+        <div class="experience">
+            <h4 class="experience-title">Master in Computer Engineering</h4>
+            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+            <experience-description>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
+            <hr>
+        </div>
+        <div class="experience">
+            <h4 class="experience-title">Master in Computer Engineering</h4>
+            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+            <experience-description>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
+            <hr>
+
+        </div>
+        <div class="experience">
+            <h4 class="experience-title">Master in Computer Engineerin</h4>
+            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+            <experience-description>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
+        </div>
+    </div>
+
+    <div class="resume-column">
+        <h3 class="resume-column-title">My Experience</h3>
+        <div class="experience">
+            <h4 class="experience-title">Sr. Font End Developer</h4>
+            <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+            <experience-description>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
+            <hr>
+
+        </div>
+        <div class="experience">
+            <h4 class="experience-title">Jr. Font End Developer</h4>
+            <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+            <experience-description>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
+            <hr>
+
+        </div>
+        <div class="experience">
+            <h4 class="experience-title">HTML Developer</h4>
+            <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+            <experience-description>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
+
+        </div>
+    </div> 
+</div>
+<div class="download">
+<button class="btn-primary">Download CV</button>
+</div>
+    </section>
+
     
-    <footer>
+    <footer class="foots">
+        <div class="foot-div-one">
+            <h3 class="f-title">Lets Connect</h3>
+            <p class="f-para">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="logo">
+                <img src="images/icons/facebook.png" alt="facebook" class="logos">
+                <img src="images/icons/twitter.png" alt="twitter" class="logos">
+                <img src="images/icons/insta.png" alt="instagram" class="logos">
+            </div>
+        </div>
+        <div class="foot-div-two">
+            <h3 class="foot-div-one">Let's Message me</h3>
+            <br>
+            <input action="text" placeholder="Your name" class="in">
+            <br>
+            <input action="email" placeholder="Your email" class="in">
+            <br>
+            <textarea action="textarea" placeholder="Message" class="in"></textarea>
+            <br>
+            <button class="btn-primary">Submit</button>
+        </div>
+
+
+
+
 
     </footer>
 </body>
